# migen-stubs

./: .gitignore  .pre-commit-config.yaml  README.md  setup.cfg
migen-stubs/fhdl/: module.pyi
