[metadata]
name = migen-stubs
author = Jevin Sweval
author_email = jevinsweval@gmail.com
description = PEP 561 type information for migen.
long_description = file: README.md
long_description_content_type = text/markdown
version = 0.1.0
url = https://github.com/jevinskie/migen-stubs
license = MIT
license_files = LICENSE

[options]
python_requires = ~=3.7
packages = migen-stubs
zip_safe = True
install_requires =
  migen

[options.package_data]
migen_stubs = *.pyi

[build-system]
requires = ["setuptools"]
